# mantel

./: CONTRIBUTING.md  LICENSE.md  Mantel.py  MantelTest.py  Mantel_with_Kendall.py  README.md  example.py  pyproject.toml  setup.py
mantel/: __init__.py  _mantel.py  _plot.py  _test.py  _utils.py
tests/: test_deterministic.py  test_stochastic.py
